--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -48,6 +48,7 @@
  */
 // @import "bower_components/inuit-layout/objects.layout";
 @import "objects.action";
+@import "objects.dropdown";
 // @import "objects.breadcrumbs";
 
 
@@ -72,5 +73,6 @@
  * #TRUMPS
  */
 @import "bower_components/inuit-clearfix/trumps.clearfix";
+@import "trumps.font";
 // @import "bower_components/inuit-widths/trumps.widths";
 // @import "bower_components/inuit-widths-responsive/trumps.widths-responsive";
