--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -73,6 +73,7 @@
  * #TRUMPS
  */
 @import "bower_components/inuit-clearfix/trumps.clearfix";
+@import "trumps.fontawesome";
 @import "trumps.font";
 // @import "bower_components/inuit-widths/trumps.widths";
 // @import "bower_components/inuit-widths-responsive/trumps.widths-responsive";
