Font size switching, summery, site options

--- a/assets/scss/_components.navigation.scss
+++ b/assets/scss/_components.navigation.scss
@@ -12,6 +12,8 @@
     border-right: 1px solid $sidebar-border-color;
     background: $sidebar-background-color;
     font-family: $font-family-sans-serif;
+    font-size: 14px;
+    line-height: $line-height-base;
 }
 
     .navigation__divider {
