--- a/assets/scss/_components.summary.scss
+++ b/assets/scss/_components.summary.scss
@@ -2,19 +2,23 @@
  * $SUMMARY
  */
 
-.summary {}
+.summary {
+    padding: 0;
 
+    ol {
+        padding-left: 1.2rem;
+    }
 
-/**
- * #COUNTERS
- */
-.summary,
-.summary ol {
-    counter-reset: item;
-    list-style: none;
-}
+    &,
+    ol {
+        list-style: none;
+    }
 
-.summary li:before {
-    content: counters(item, '.') '. ';
-    counter-increment: item;
+    a {
+        display: block;
+        text-decoration: none;
+        color: inherit;
+        padding: 0.5rem 0;
+    }
+
 }
