--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,7 +20,7 @@
 // @import "bower_components/inuit-responsive-tools/tools.responsive";
 // @import "bower_components/inuit-tools-widths/tools.widths";
 @import "tools.mixins";
-// @import "tools.aliases";
+@import "tools.aliases";
 
 
 /**
