--- a/assets/scss/_components.page.scss
+++ b/assets/scss/_components.page.scss
@@ -7,9 +7,9 @@
 }
 
     .page__wrap {
-        max-width: 800px;
+        max-width: 840px;
         margin: 0 auto;
-        padding: 40px 0 40px;
+        padding: 40px 20px;
     }
 
         .page__headline {
