--- a/assets/scss/_objects.dropdown.scss
+++ b/assets/scss/_objects.dropdown.scss
@@ -17,6 +17,7 @@ $dropdown-background: #fafafa;
     padding: 0;
     color: $text-color-muted;
     cursor: default;
+    width: 9em;
 
     visibility: hidden;
     opacity: 0;
