--- a/assets/scss/_components.markdown.scss
+++ b/assets/scss/_components.markdown.scss
@@ -1,254 +1,127 @@
-.markdown {
+.page__content {
     overflow: hidden;
     word-wrap: break-word;
     display: block;
 
+
+    /**
+     * #SPACING
+     */
+    p, blockquote,
+    ul, ol, dl,
+    table, pre, hr {
+        margin-top: 0;
+        margin-bottom: 1rem;
+    }
+
     & > *:first-child {
         margin-top: 0 !important;
     }
+
     & > *:last-child {
         margin-bottom: 0 !important;
     }
 
+
+    /**
+     * #INLINE ELEMENTS
+     */
+    strong,
+    b {
+        font-weight: 700;
+    }
+
+    em,
+    i {
+        font-style: italic;
+    }
+
     a {
+        color: inherit;
+        text-decoration: none;
         outline: 0;
-    }
 
-    strong {
-        font-weight: bold;
+        &:hover,
+        &:focus,
+        &:active {
+            text-decoration: underline;
+        }
     }
-
-    // h1 {
-    //     font-size: 2em;
-    //     margin: 0.67em 0;
-    // }
 
     img {
         max-width: 100%;
+        page-break-inside: avoid;
     }
 
-    hr {
-        -moz-box-sizing: content-box;
-        box-sizing: content-box;
-        height: 0;
-    }
 
-    pre {
-        overflow: auto;
-    }
-
-    code,
-    pre {
-        font-family: monospace, monospace;
-        font-size: 1em;
-    }
-
-    table {
-        border-collapse: collapse;
-        border-spacing: 0;
-    }
-
-    td,
-    th {
-        padding: 0;
-    }
-
-    * {
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-    }
-
-    a {
-        color: #4183c4;
-        text-decoration: none;
-    }
-
-    a:hover,
-    a:focus,
-    a:active {
-        text-decoration: underline;
-    }
-
-    hr {
-        height: 0;
-        margin: 15px 0;
-        overflow: hidden;
-        background: transparent;
-        border: 0;
-        border-bottom: 1px solid #ddd;
-    }
-
-    hr:before,
-    hr:after {
-        display: table;
-        content: " ";
-    }
-
-    hr:after {
-        clear: both;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        margin-top: 15px;
-        margin-bottom: 15px;
-        line-height: 1.1;
-    }
-
-    h1 {
-        font-size: 30px;
-    }
-
-    h2 {
-        font-size: 21px;
-    }
-
-    h3 {
-        font-size: 16px;
-    }
-
-    h4 {
-        font-size: 14px;
-    }
-
-    h5 {
-        font-size: 12px;
-    }
-
-    h6 {
-        font-size: 11px;
-    }
-
-    blockquote {
-        margin: 0;
-    }
-
-    ul,
-    ol {
-        padding: 0;
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    ol ol {
-        list-style-type: lower-roman;
-    }
-
-    dd {
-        margin-left: 0;
-    }
-
-    code,
-    pre {
-        font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-        font-size: 12px;
-    }
-
-    pre {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    .markdown-body>*:first-child {
-        margin-top: 0 !important;
-    }
-
-    .markdown-body>*:last-child {
-        margin-bottom: 0 !important;
-    }
-
-    .anchor {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        display: block;
-        padding-right: 6px;
-        padding-left: 30px;
-        margin-left: -30px;
-    }
-
-    .anchor:focus {
-        outline: none;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        position: relative;
-        margin-top: 1em;
-        margin-bottom: 16px;
+    /**
+     * #HEADLINES
+     */
+    h1, h2, h3, h4, h5, h6 {
         font-weight: bold;
-        line-height: 1.4;
+        margin-top: 0;
+        margin-bottom: 1rem;
+        line-height: 1.25;
     }
 
     h1 {
-        padding-bottom: 0.3em;
-        font-size: 2.25em;
-        line-height: 1.2;
-        border-bottom: 1px solid #eee;
+        font-size: 2rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.06);
+        margin-bottom: 2rem;
     }
 
     h2 {
-        padding-bottom: 0.3em;
-        font-size: 1.75em;
-        line-height: 1.225;
-        border-bottom: 1px solid #eee;
+        font-size: 1.75rem;
+        margin: 2rem 0;
     }
 
     h3 {
-        font-size: 1.5em;
-        line-height: 1.43;
+        font-size: 1.5rem;
+        margin: 2rem 0 1.5rem;
     }
 
     h4 {
-        font-size: 1.25em;
+        font-size: 1.25rem;
+        margin: 2rem 0 1rem;
     }
 
-    h5 {
-        font-size: 1em;
+    h5, h6 {
+        font-size: 1rem;
+        margin: 1rem 0 1rem;
     }
 
     h6 {
-        font-size: 1em;
-        color: #777;
+        opacity: 0.75;
     }
 
-    p,
-    blockquote,
-    ul,
-    ol,
-    dl,
-    table,
-    pre {
-        margin-top: 0;
-        margin-bottom: 16px;
-    }
 
-    hr {
-        height: 4px;
+    /**
+     * #LISTS
+     */
+    ul {
+        list-style: square inside;
         padding: 0;
-        margin: 16px 0;
-        background-color: #e7e7e7;
-        border: 0 none;
+
+        ul {
+            padding-left: 1rem;
+        }
     }
 
-    ul,
     ol {
-        padding-left: 2em;
+        list-style: decimal inside;
+        padding: 0;
+
+        ol {
+            padding-left: 1rem;
+            list-style: lower-alpha inside;
+        }
     }
 
     ol ol,
     ol ul,
-    ul ul {
-        margin-top: 0;
+    ul ul,
+    ul ol {
         margin-bottom: 0;
     }
 
@@ -256,123 +129,124 @@
         padding: 0;
     }
 
-    dl dt {
-        padding: 0;
-        margin-top: 16px;
-        font-size: 1em;
+    dt {
+
         font-style: italic;
         font-weight: bold;
     }
 
-    dl dd {
-        padding: 0 16px;
-        margin-bottom: 16px;
+    dd {
+        margin-left: 2rem;
+        margin-bottom: 0.5rem;
     }
 
+    /**
+     * #BLOCKQUOTES
+     */
     blockquote {
-        padding: 0 15px;
-        color: #777;
-        border-left: 4px solid #ddd;
+        padding-left: 1rem;
+        margin-left: 1rem;
+        border-left: 4px solid rgba(0, 0, 0, 0.06);
+        font-style: italic;
+
+        & > *:first-child {
+            margin-top: 0;
+        }
+
+        & > *:last-child {
+            margin-bottom: 0;
+        }
     }
 
-    blockquote>:first-child {
-        margin-top: 0;
-    }
 
-    blockquote>:last-child {
-        margin-bottom: 0;
-    }
-
-    table {
-        display: block;
-        width: 100%;
-        overflow: auto;
-    }
-
-    table th {
-        font-weight: bold;
-    }
-
-    table th,
-    table td {
-        padding: 6px 13px;
-        border: 1px solid #ddd;
-    }
-
-    table tr {
-        background-color: #fff;
-        border-top: 1px solid #ccc;
-    }
-
-    table tr:nth-child(2n) {
-        background-color: #f8f8f8;
-    }
-
-    img {
-        max-width: 100%;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        page-break-inside: avoid;
+    /**
+     * #CODE
+     */
+    code,
+    pre {
+        font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
     }
 
     code {
+        display: inline-block;
         padding: 0;
         padding-top: 0.2em;
         padding-bottom: 0.2em;
         margin: 0;
         font-size: 85%;
-        background-color: #f7f7f7;
+        background-color: rgba(0, 0, 0, 0.05);
         border-radius: 3px;
+
+        &:before,
+        &:after {
+            letter-spacing: -0.2em;
+            content: "\00a0";
+        }
     }
 
-    code:before,
-    code:after {
-        letter-spacing: -0.2em;
-        content: "\00a0";
-    }
-
-    pre>code {
-        padding: 0;
-        margin: 0;
-        font-size: 100%;
-        white-space: pre;
-        background: transparent;
-        border: 0;
-    }
-
-    .highlight pre,
     pre {
-        padding: 16px;
+        padding: 1rem;
         overflow: auto;
-        font-size: 85%;
-        line-height: 1.45;
-        background-color: #f7f7f7;
+        font-size: 0.9rem;
+        line-height: 1.5;
+        background-color: rgba(0, 0, 0, 0.04);
         border: none;
         border-radius: 3px;
-    }
-
-    pre {
         word-wrap: normal;
     }
 
-    pre code {
-        display: inline;
-        max-width: initial;
+    pre > code {
         padding: 0;
         margin: 0;
-        overflow: initial;
-        line-height: inherit;
-        word-wrap: normal;
-        background-color: transparent;
+        font-size: inherit;
+        white-space: pre;
+        background: none;
         border: 0;
+
+        &:before,
+        &:after {
+            content: '';
+        }
     }
 
-    pre code:before,
-    pre code:after {
-        content: normal;
+
+    /**
+     * #TABLES
+     */
+    table {
+        border-collapse: collapse;
+        border-spacing: 0;
+        display: block;
+        width: 100%;
+        overflow: auto;
     }
 
-    .highlight {
-        background: #ffffff;
+    tr:nth-child(2n) {
+        background-color: rgba(0, 0, 0, 0.04);
+    }
+
+    td,
+    th {
+        padding: 0.5rem 1rem;
+        border: 1px solid #e7e7e7;
+
+        .sepia & {
+            border-color: #d1ccc0;
+        }
+    }
+
+    th {
+        font-weight: 700;
+    }
+
+
+    /**
+     * #HR
+     */
+    hr {
+        height: 4px;
+        padding: 0;
+        background-color: rgba(0, 0, 0, 0.06);
+        border: 0 none;
     }
 }
