--- a/assets/scss/_components.navigation.scss
+++ b/assets/scss/_components.navigation.scss
@@ -14,6 +14,11 @@
     font-family: $font-family-sans-serif;
     font-size: 14px;
     line-height: $line-height-base;
+
+    @media (max-width: ($sidebar-width * 2)) {
+        width: calc(100% - 60px);
+        left: -100%;
+    }
 }
 
     .navigation__divider {
