--- a/assets/scss/_components.summary.scss
+++ b/assets/scss/_components.summary.scss
@@ -21,4 +21,10 @@
         padding: 0.5rem 0;
     }
 
+
 }
+    .summary__item {}
+
+    .summary__item--active > a {
+        font-weight: 700;
+    }
