--- a/assets/scss/_components.markdown.scss
+++ b/assets/scss/_components.markdown.scss
@@ -248,6 +248,7 @@
         padding: 0;
         background-color: rgba(0, 0, 0, 0.06);
         border: 0 none;
+        margin: 2rem 0;
     }
 
     /**
