--- a/assets/scss/_trumps.print.scss
+++ b/assets/scss/_trumps.print.scss
@@ -1,25 +1,12 @@
 @media print {
-
-    .navigation {
-        display: none;
-    }
-
-    .book {
-        left: 0;
-        transform: translate(0, 0);
-    }
-
+    .printable {
+        
         .book__header {
-            .action {
-                display: none;
-            }
-            .book__title {
-                opacity: 1;
-            }
+            display: none;
         }
 
         .book_page {
             max-width: 100%;
         }
-
+    }
 }
