--- a/assets/scss/_objects.dropdown.scss
+++ b/assets/scss/_objects.dropdown.scss
@@ -21,7 +21,7 @@ $dropdown-sepia-background: darken($background-color-sepia, 2%);
     opacity: 0;
     transition: opacity 300ms ease;
 
-    .with-dropdown & {
+    .with-dropdown + & {
         visibility: visible;
         opacity: 1;
     }
@@ -47,32 +47,52 @@ $dropdown-sepia-background: darken($background-color-sepia, 2%);
 	    border-left: 5px solid transparent;
 	    border-right: 5px solid transparent;
     }
+
+    &.dropdown--left {
+        left: auto;
+        right: calc(50% - 11px);
+
+        &:before {
+            left: auto;
+            right: 4px;
+        }
+
+        &:after {
+            left: auto;
+            right: 5px;
+        }
+    }
 }
 
     .dropdown__item {
-        line-height: 2;
-        padding: 0 15px;
-        white-space: nowrap;
-        transition: color 200ms ease;
-        cursor: pointer;
+        &--half {
+            width: 50%;
+            float: left;
+        }
 
-        &:hover {
-            color: $text-color;
+        &--divider {
+            clear: both;
+
+            height: 0px;
+            padding-top: 5px;
+            margin-bottom: 5px;
         }
     }
 
-    .dropdown__item--half {
-        width: 50%;
-        float: left;
-    }
+        .dropdown__link {
+            display: block;
+            line-height: 2;
+            padding: 0 15px;
+            white-space: nowrap;
+            transition: color 200ms ease;
+            cursor: pointer;
+            color: inherit;
+            text-decoration: none;
 
-    .dropdown__item--divider {
-        clear: both;
-
-        height: 0px;
-        padding-top: 5px;
-        margin-bottom: 5px;
-    }
+            &:hover {
+                color: $text-color;
+            }
+        }
 
 /**
  * THEMING
