[error] add error page

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -49,6 +49,7 @@
 @import "components.page";
 @import "components.actions";
 @import "components.markdown";
+@import "components.error";
 
 /**
  * #TRUMPS
