--- a/assets/scss/_settings.global.scss
+++ b/assets/scss/_settings.global.scss
@@ -34,6 +34,11 @@ $sidebar-border-color:    rgba(0, 0, 0, 0.075);
 
 
 
+$max-page-width:          840px;
+$prevnext-width:          50px;
+$alt-book-layout-breakpoint: ($sidebar-width + $max-page-width + 2 * $prevnext-width);
+
+
 
 
 /**
