Fixed elastic scrolling (Close #16)

--- a/assets/scss/_components.book.scss
+++ b/assets/scss/_components.book.scss
@@ -9,6 +9,7 @@
     bottom: 0;
     left: 0;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
     .book__wrap {
@@ -20,6 +21,7 @@
             left: 0;
             bottom: 0;
             overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
         }
     }
 
